OutputView: Filter ANSI sequences

Summary:
Hardcoding the filter function in the outputmodel for now.

Not making this a filter strategy on purpose, it doesn't fit into the
current architecture. Stripping ANSI sequences is merely a
QString->QString transformation, while the filtering strategies do a
QString->FilteredItem transformation.

CCBUG: 113128
BUG: 321939
FIXED-IN: 5.0

Subscribers: apol, kdevelop-devel

Projects: #kdevelop

Differential Revision: https://phabricator.kde.org/D660