outputview/outputmodel.cpp
@@ -27,6 +27,7 @@
 
 #include <interfaces/icore.h>
 #include <interfaces/idocumentcontroller.h>
+#include <util/kdevstringhandler.h>
 
 #include <QtCore/QStringList>
 #include <QtCore/QTimer>
@@ -35,6 +36,7 @@
 #include <QApplication>
 #include <QFontDatabase>
 
+#include <functional>
 #include <set>
 
 Q_DECLARE_METATYPE(QVector<KDevelop::FilteredItem>)
@@ -63,7 +65,10 @@ class ParseWorker : public QObject
 public:
     ParseWorker()
         : QObject(0)
-        , m_filter( new NoFilterStrategy )
+        , m_filter(new NoFilterStrategy)
+        , m_preFilterFunctions {
+            &KDevelop::stripAnsiSequences
+        }
         , m_timer(new QTimer(this))
     {
         m_timer->setInterval(BATCH_AGGREGATE_TIME_DELAY);
@@ -110,6 +115,14 @@ private slots:
         QVector<KDevelop::FilteredItem> filteredItems;
         filteredItems.reserve(qMin(BATCH_SIZE, m_cachedLines.size()));
 
+        // apply pre-filtering functions
+        foreach (const auto filterFunction, m_preFilterFunctions) {
+            std::for_each(m_cachedLines.begin(), m_cachedLines.end(), [filterFunction](QString& in) {
+                in = filterFunction(in);
+            });
+        }
+
+        // apply filtering strategy
         foreach(const QString& line, m_cachedLines) {
             FilteredItem item = m_filter->errorInLine(line);
             if( item.type == FilteredItem::InvalidItem ) {
@@ -134,6 +147,7 @@ private slots:
 
 private:
     QSharedPointer<IFilterStrategy> m_filter;
+    QVector<std::function<QString(const QString&)>> m_preFilterFunctions;
     QStringList m_cachedLines;
 
     QTimer* m_timer;
